added some parsing test to test differences between IE6/7 on the one side and IE8 on the other

--- a/test/unit/data/print-styles.css
+++ b/test/unit/data/print-styles.css
@@ -1,7 +1,9 @@
-.show_on_screen {
+section.show_on_screen,
+article.show_on_screen {
 	display: none;
 }
-.show_on_print {
+section.show_on_print,
+article.show_on_print {
 	display: block;
 }
 .print-body-class .dotted-with-body-class {
